# picodraw

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  asm.txt
benches/: software.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  data.rs  graph.rs  lib.rs
crates/core/src/graph/: collect.rs  mod.rs  op.rs
crates/core/src/shader/: io.rs  math.rs  mod.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/opengl/: Cargo.toml
crates/opengl/src/: backend.rs  dispatch.rs  lib.rs
crates/opengl/src/compiler/: codegen.rs  mod.rs  serialize.rs
crates/opengl/src/opengl/: info.rs  mod.rs  profiler.rs  program.rs  stream.rs  texture.rs  util.rs
crates/opengl/src/raw/: bindings.rs  mod.rs
crates/opengl1/: Cargo.toml
crates/opengl1/src/: backend.rs
crates/opengl1/src/compiler/: codegen.rs
crates/opengl1/src/raw/: bindings.rs  mod.rs
crates/software/: Cargo.toml
crates/software/examples/: example.rs
crates/software/src/: backend.rs  buffer.rs  dispatch.rs  lib.rs  simd.rs
crates/software/src/shader/: interpreter.rs  transpiler.rs
crates/software/src/util/: mod.rs  simd.rs  threadpool.rs
crates/software/src/vm/: compiler.rs  interpreter.rs  mod.rs
crates/software/src/vm/compiler/: mod.rs
crates/software/src/vm/compiler/ir/: dynasplit.rs  graph2ir.rs  hashcons.rs  lowering.rs  mod.rs  peephole.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: example.rs  opengl.rs  opengl_circles.rs  opengl_stress.rs
src/: data.rs  graph.rs  lib.rs  shader.rs  types.rs
src/opengl/: bindings.rs  gllayer.rs  mod.rs
src/opengl/codegen/: atlas.rs  encoding.rs  glsl.rs  mod.rs
tests/: drawtest.rs
