[workspace]
members = [
    ".",
    "crates/core",
    "crates/derive",
    "crates/opengl"
]

[workspace.dependencies]
bmp = "0.5.0"
slotmap = "1.0.7"
proc-macro2 = "1"
quote = "1"
syn = "2"


[package]
name = "picodraw"
version = "1.0.0"
edition = "2024"
description = "A smol gpu graphics library"
license = "MIT OR Apache-2.0"

[dependencies]
picodraw-core = { path = "crates/core" }
picodraw-derive = { path = "crates/derive", optional = true }
picodraw-opengl = { path = "crates/opengl", optional = true }

[dev-dependencies]
pugl-rs = { git = "https://github.com/blepfx/pugl-rs", features = ["opengl"] }
bmp = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:picodraw-derive"]
opengl = ["dep:picodraw-opengl"]

[[example]]
name = "opengl"
required-features = ["opengl", "derive"]
