[workspace]
members = [
    ".",
    "crates/core",
    "crates/derive",
    "crates/opengl"
, "crates/software"]

[workspace.dependencies]
pugl-rs = { git = "https://github.com/blepfx/pugl-rs", features = ["opengl"] }
image = { version = "0.25.5", default-features = false, features = ["webp"] }
slotmap = "1.0.7"
proc-macro2 = "1"
quote = "1"
syn = "2"


[package]
name = "picodraw"
version = "1.0.0"
edition = "2024"
description = "A smol gpu graphics library"
license = "MIT OR Apache-2.0"

[dependencies]
picodraw-core = { path = "crates/core", default-features = false }
picodraw-derive = { path = "crates/derive", optional = true }
picodraw-opengl = { path = "crates/opengl", optional = true }
picodraw-software = { path = "crates/software", optional = true }

[dev-dependencies]
pugl-rs = { workspace = true }
image = { workspace = true }

[features]
default = ["derive", "collect", "backend-software"]
collect = ["picodraw-core/collect"]
derive = ["dep:picodraw-derive"]

backend-opengl = ["dep:picodraw-opengl"]
backend-software = ["dep:picodraw-software"]

[[example]]
name = "opengl"
required-features = ["backend-opengl", "derive"]
