[workspace]
members = [
    ".",
    "crates/core",
    "crates/derive",
    "crates/opengl", 
    "crates/software"
]

[workspace.dependencies]
# tests & benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
pugl-rs = { git = "https://github.com/blepfx/pugl-rs", features = ["opengl"] }
image = { version = "0.25.5", default-features = false, features = ["webp"] }

# feature(software)
bumpalo = { version = "3.17", features = ["boxed", "collections"] }

# feature(opengl)
glow = { git = "https://github.com/Quant1um/glow", branch = "main" }

# feature(software) & feature(opengl)
slotmap = "1.0.7"

# feature(derive)
proc-macro2 = "1"
quote = "1"
syn = "2"

[profile.bench]
debug = true

[package]
name = "picodraw"
version = "1.0.0"
edition = "2024"
description = "A smol gpu graphics library"
license = "MIT OR Apache-2.0"

[dependencies]
picodraw-core = { path = "crates/core", default-features = false }
picodraw-derive = { path = "crates/derive", optional = true }
picodraw-opengl = { path = "crates/opengl", optional = true }
picodraw-software = { path = "crates/software", optional = true }

[dev-dependencies]
criterion = { workspace = true }
pugl-rs = { workspace = true }
image = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:picodraw-derive"]
opengl = ["dep:picodraw-opengl"]
software = ["dep:picodraw-software"]

[[example]]
name = "opengl"
required-features = ["opengl", "derive"]

[[bench]]
name = "software"
harness = false
required-features = ["software", "derive"]
