[package]
name = "picodraw-software"
version = "0.1.0"
edition = "2024"

[dependencies]
picodraw-core = { path = "../core" }
slotmap = { workspace = true }
bumpalo = { version = "3.17", features = ["boxed", "collections"] }
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }